updated code int -> Guid, added docker with db

--- a/Relay.Server/appsettings.json
+++ b/Relay.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost:5432;Database=reiay;Username=postgres;Password=serval"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=relaydb;Username=relayuser;Password=password"
     },
     "Logging": {
         "LogLevel": {
@@ -11,11 +11,6 @@
     "AllowedHosts": "*",
     "ServerAddress": "178.173.24.235",
     "ServerPort": "5021",
-    "Server": "127.0.0.1",
-    "Port": "3306",
-    "UserID": "root",
-    "Password": "adf",
-    "Database": "relay",
     "Jwt": {
         "Key": "KxCTL*[Kg}PU5V|K[e@j|DL1J5Aa0ZG)",
         "Issuer": "RelayIssuer",
