--- a/ServerCore/ServerCore.csproj
+++ b/ServerCore/ServerCore.csproj
@@ -7,7 +7,7 @@
         <PublicSign>false</PublicSign>
         <AssemblyVersion>0.1.*</AssemblyVersion>
         <FileVersion>0.1.*</FileVersion>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -26,16 +26,22 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Abp.AspNetCore" Version="9.4.2"/>
-        <PackageReference Include="Abp.AutoMapper" Version="9.4.2"/>
-        <PackageReference Include="Abp.ZeroCore" Version="9.4.2"/>
-        <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="9.4.2"/>
+        <PackageReference Include="Abp.AspNetCore" Version="10.0.0" />
+        <PackageReference Include="Abp.AspNetCore.SignalR" Version="10.0.0" />
+        <PackageReference Include="Abp.AutoMapper" Version="10.0.0" />
+        <PackageReference Include="Abp.ZeroCore" Version="10.0.0" />
+        <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="10.0.0" />
         <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="9.0.0"/>
         <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="Server\Chats\RelayHubModule.cs" />
     </ItemGroup>
 
 </Project>
