Уточнена строка доступа к базе данных

--- a/ServerWeb/appsettings.json
+++ b/ServerWeb/appsettings.json
@@ -8,7 +8,7 @@
     ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=userid;Password=pwd;Host=localhost;Port=port;Database=Relay;Connection Lifetime=0;"
+    "Default": "User ID=postgres;Password=serval;Host=127.0.0.1;Port=5433;Database=relay;Connection Lifetime=0;"
   },
   "AllowedHosts": "*",
   "App": {
