Уточнена строка доступа к базе данных

--- a/ServerWeb/appsettings.Development.json
+++ b/ServerWeb/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=19031995;Host=localhost;Port=5432;Database=Relay;Connection Lifetime=0;"
+    "DefaultConnection": "User ID=postgres;Password=serval;Host=localhost;Port=5433;Database=relay;Connection Lifetime=0;"
   },
   "App": {
     "ServerRootAddress": "http://178.173.24.235:9902/",
