--- a/ServerWebCore/ServerWebCore.csproj
+++ b/ServerWebCore/ServerWebCore.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Library</OutputType>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PublicSign>false</PublicSign>
@@ -12,6 +13,7 @@
         <NeutralLanguage>en</NeutralLanguage>
         <LangVersion>default</LangVersion>
         <TargetFramework>net9.0</TargetFramework>
+        <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
